--- a/css/vgrecapitulatif.css
+++ b/css/vgrecapitulatif.css
@@ -1,12 +1,14 @@
-body{
-	
-}
 
 #photo{
 	width:100%;
 	height:100%;
 	z-index:-1;
 	position:fixed;
+}
+
+#deconnecom{
+    margin-left: 85%;
+    margin-top: 2%;
 }
 
 h1{
@@ -18,7 +20,10 @@ h1{
 	background-color: #ece8e3;
 }
 
-
+#logologout{
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
 
 #fond {	
 	width:100%;
